fix: meta keywords, title

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>
-      Harsh Maisheri - Entreprenuer, Web Developer, UI/UX Developer, Designer,
-      Investor, Reader, Learner
+      Harsh Maisheri - Entreprenuer, Web Developer, UI/UX Designer, Brand
+      Strategist Investor, Reader, Learner
     </title>
     <meta
-      content="harsh maisheri, harsh meisheri, maisheri, meisheri, harsh, Streatly, mykraft, streetly, food delivery app, web Developer, Entreprenuer"
+      content="harsh maisheri, harsh meisheri, maisheri, meisheri, harsh, Streatly, mykraft, streetly, food delivery app, web Developer, Entreprenuer, UI, Ux, ui/ux designer, designer, freelancer, javascript developer, Start up"
       name="keywords"
     />
     <meta content="" name="description" />
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="header-content">
           <h1>I'm <span class="typed"></span></h1>
-          <p>designer, developeur, photographer</p>
+          <p>designer, developer, brand strategist</p>
 
           <ul class="list-unstyled list-social">
             <li>
